syntax = "proto3";
package storage;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

service Storage {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}
